{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 9,
  "lineage": "58f37152-6437-eadb-a4d9-a64bd7615000",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:internet-gateway/igw-0be3eb58d97a47900",
            "id": "igw-0be3eb58d97a47900",
            "owner_id": "785169158894",
            "vpc_id": "vpc-060898ca969f4d25a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0be3eb58d97a47900",
            "id": "r-rtb-03a2b836f43f2af621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a2b836f43f2af62",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:route-table/rtb-03a2b836f43f2af62",
            "id": "rtb-03a2b836f43f2af62",
            "owner_id": "785169158894",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yannick-publicroutetable",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "yannick-publicroutetable",
              "env": "Dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-060898ca969f4d25a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066ff62a9f2f66a99",
            "route_table_id": "rtb-03a2b836f43f2af62",
            "subnet_id": "subnet-06d34062cc8a573b4"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6df1ac10988b998",
            "route_table_id": "rtb-03a2b836f43f2af62",
            "subnet_id": "subnet-037158db573617a84"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:subnet/subnet-06d34062cc8a573b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d34062cc8a573b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785169158894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yannick-publicsubnet",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "yannick-publicsubnet",
              "env": "Dev"
            },
            "vpc_id": "vpc-060898ca969f4d25a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:subnet/subnet-037158db573617a84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037158db573617a84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "785169158894",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yannick-publicsubnet",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "yannick-publicsubnet",
              "env": "Dev"
            },
            "vpc_id": "vpc-060898ca969f4d25a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:785169158894:vpc/vpc-060898ca969f4d25a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08cab002b2d9c379e",
            "default_route_table_id": "rtb-0e7089044c045422e",
            "default_security_group_id": "sg-01d9243d2fafe1844",
            "dhcp_options_id": "dopt-0c0c93d52d87e640e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-060898ca969f4d25a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7089044c045422e",
            "owner_id": "785169158894",
            "tags": {
              "Name": "yannick-vpc",
              "env": "Dev"
            },
            "tags_all": {
              "Name": "yannick-vpc",
              "env": "Dev"
            }
          }
        }
      ]
    }
  ]
}